--- a/frontend_react/public/index.html
+++ b/frontend_react/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="9225ef56-6184-40d7-8ade-0a3fb09eac20";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
